# MalChela

./: .gitignore  404.html  Cargo.toml  MZMD5.txt  README.md  XMZMD5.txt  detections.yaml  generated_rule.yara  index.html  launch_vol3.command  mac_stack.sh  malchela-test.yar  malhash--202503021832.txt  malhash--202503022022.txt  malhash-0ccddab0d87776d78c613c6e7a6f3bce93ffc3d3-202503022151.txt  malhash-9218E5CAD03C752F237ED87A9E52DEF4-202503021804.txt  malhash-9218E5CAD03C752F237ED87A9E52DEF4-202503021811.txt  malhash-9218E5CAD03C752F237ED87A9E52DEF4-202503021819.txt  malhash-9218E5CAD03C752F237ED87A9E52DEF4-202503021823.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503021843.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503021849.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503021903.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503021922.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503021926.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503021929.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503021939.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503021945.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503021948.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503021952.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503021956.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503022012.txt  malhash-9218e5cad03c752f237ed87a9e52def4-202503022022.txt  mkdocs.yml  privacy.md  relaunch-server.sh  release-unattended.sh  release.sh  remnux-update.sh  scratchpad  scratchpadRedline Stealer Strings  (+3 more)
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/mcp/: AGENTS.md  README.md  example_config.json  index.js  package.json
.github/codeql/: codeql-config.yml
Configuration/api-configuration/: index.html
Configuration/tools-yaml/: index.html
Coretools/: index.html
Coretools/Usage/: index.html
Coretools/combine_yara/: index.html
Coretools/extract_samples/: index.html
Coretools/fileanalyzer/: index.html
Coretools/fileminer/: index.html
Coretools/hashcheck/: index.html
Coretools/hashit/: index.html
Coretools/malhash/: index.html
Coretools/mismatchminer/: index.html
Coretools/mitre_lookup/: index.html
Coretools/mstrings/: index.html
Coretools/mzcount/: index.html
Coretools/mzhash/: index.html
Coretools/mzmd5/: index.html
Coretools/nsrlquery/: index.html
Coretools/strings_to_yara/: index.html
Coretools/tiquery/: index.html
Coretools/xmzhash/: index.html
Coretools/xmzmd5/: index.html
MITRE_lookup/: Cargo.toml
MITRE_lookup/src/: main.rs
MalChelaGUI/: Cargo.toml
MalChelaGUI/koans/: crabby_koans.yaml
MalChelaGUI/remnux/: default_tools.yaml  remnux_tools.yaml
MalChelaGUI/src/: case_modal.rs  fileminer.rs  main.rs  mitre.rs  tiquery_panel.rs  tshark_panel.rs  vol3_panel.rs  workspace.rs
about/: Cargo.toml  index.html
about/src/: main.rs
api/: README.txt
assets/koans/: crabby_koans.yaml
cached/: Cargo.toml  os-malware.json
cached/src/: main.rs
cases/: index.html
codesign_check/: Cargo.toml
codesign_check/src/: main.rs
combine_yara/: Cargo.toml
combine_yara/src/: main.rs
common_config/: Cargo.toml
common_macho/: Cargo.toml
common_ui/: Cargo.toml
config/: Cargo.toml  vol3_plugins.yaml
coretools/: index.html
docs/: MalChela_User_Guide.md  MalChela_User_Guide_v2.1.1.md  MalChela_User_Guide_v2.1.2.md  MalChela_User_Guide_v2.1.md  MalChela_User_Guide_v2.md  about.md  cases.md  index.md  install.md  mcp.md  navigation.md  remnux.md  support.md  user-guide.md
dpp_extract/: Cargo.toml
extract_samples/: Cargo.toml
fileanalyzer/: Cargo.toml
fileanalyzer/src/: entropy.rs  filetype.rs  fuzzy.rs  hashing.rs  imphash.rs  main.rs  metadata.rs  packed.rs  pe_parser.rs  signing.rs  strings.rs  suspiciousapis.rs  vt_scan.rs  yara_scan.rs
fileminer/: Cargo.toml
fileminer/src/: main.rs
hashcheck/: Cargo.toml
hashit/: Cargo.toml
home/: index.html
images/: malchela.icns
install/: index.html
mac/: index.html
macho_info/: Cargo.toml
macho_info/src/: main.rs
malchela/: .gitignore  Cargo.toml  theme.rs
malchela/saved_output/strings_to_yara/: noradco_redline.yar
malchela/src/: main.rs  menu.rs  theme.rs
malhash/: Cargo.toml
malhash/src/: main.rs
mcp/: AGENTS.md  README.md  index.html  index.js  package.json
measure_yara/: Cargo.toml
measureyara/: Cargo.toml
mismatchminer/: Cargo.toml
mismatchminer/src/: main.rs
mstrings/: Cargo.toml
mstrings/src/: main.rs
mzcount/: Cargo.toml
mzhash/: Cargo.toml
mzhash/src/: main.rs
mzmd5/: Cargo.toml
navigation/: index.html
nsrl_md5/: Cargo.toml
nsrl_sha1/: Cargo.toml
nsrlmd5/: Cargo.toml
nsrlquery/: Cargo.toml
nsrlquery/src/: main.rs
nsrlsha1/: Cargo.toml
plist_analyzer/: Cargo.toml
plist_analyzer/src/: main.rs
remnux/: index.html
rename_malware/: Cargo.toml
scripts/: tshark_to_csv.py
search/: search_index.json
server/: malchela_pwa.html  malchela_server.py  manifest.json  server_config.yaml  setup_server.sh  start-server.sh  start_server.sh
site/: 404.html  index.html
strings_to_yara/: Cargo.toml
support/: index.html
templates/: cover.html.j2
tiquery/: Cargo.toml
tiquery/src/: config.rs  hash.rs  main.rs
tiquery/src/sources/: fs.rs  gsb.rs  ha.rs  mb.rs  md.rs  mod.rs  ms.rs  objectivesee.rs  otx.rs  tier2.rs  tr.rs  urlscan.rs  vt.rs
tools/: index.html
update-test/: Cargo.toml
vthash/: Cargo.toml
xmzhash/: Cargo.toml
xmzmd5/: Cargo.toml
yara-backend/: BASELINE.md  CHANGELOG.md  Cargo.toml  README.md
yara-backend/benches/: compile.rs  scan_file.rs  scan_mem.rs
yara-backend/src/: audit.rs  backend.rs  cache.rs  compile.rs  error.rs  lib.rs  match_types.rs  scan.rs
yara-backend/tests/: audit_evasion.rs  chaos.rs  concurrency.rs  determinism.rs  file_rules.rs  inline_rules.rs  readme_examples.rs
yara-backend/tests/fixtures/rules/: malformed.yar  multi_file_types.yar  multi_namespace.yar  mz_header.yar  uses_magic.yar  with_tags.yar
yara-backend/tests/fixtures/samples/: README.md
yara-backend/tools/: audit_yara_rules.sh
yara_rules/: readme.txt
(+3072 files in other folders)
