[workspace]
resolver = "2"
members = [ "about", "combine_yara", "extract_samples", "fileanalyzer", "hashit", "mstrings", "malchela", "mzcount", "strings_to_yara", "cached", "common_config", "mismatchminer", "nsrlquery", "config", "common_ui", "hashcheck", "mzhash", "xmzhash", "fileminer", "MITRE_lookup", "tiquery", "plist_analyzer", "macho_info", "codesign_check"]

[patch.crates-io]
serde_yml = { path = "vendor/serde_yml" }
