[package]
name = "MalChelaGUI"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rfd = "0.13"  
colored = "2.1"
ansi-parser = "0.9"
image = "0.25.6"
once_cell = "1.21.3"
regex = "1.11.1"
chrono = "0.4.40"
strip-ansi-escapes = "0.2.1"
egui = "0.23"
serde_json = "1.0.140"
jsonxf = "1.1"
shellwords = "1.1.0"
shell-words = "1.1.0"
rand = "0.9.1"
common_ui = { path = "../common_ui" }

[package.metadata.bundle]
name = "MalChela"
identifier = "com.bakerstreet.malchela"
icon = ["images/malchela.icns"]
