[package]
name = "MalChelaGUI"
version = "3.0.3"
edition = "2021"

[dependencies]
eframe = { version = "0.27", features = ["glow"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rfd = "0.13"  
colored = "2.2"
ansi-parser = "0.9"
image = "0.25.9"
once_cell = "1.21.3"
regex = "1.12.3"
chrono = "0.4.43"
strip-ansi-escapes = "0.2.1"
serde_json = "1.0.149"
jsonxf = "1.1"
shellwords = "1.1.0"
shell-words = "1.1.1"
rand = "0.9.2"
common_ui = { path = "../common_ui" }
which = "7.0.3"
tabled = "0.19.0"
sha2 = "0.10.9"
md5 = "0.7.0"
walkdir = "2.5.0"
common_config = { path = "../common_config" }
zip = "4.6.1"
dispatch = "0.2.0"
opener = "0.8.4"
lazy_static = "1.5.0"
open = "5.3.3"
pulldown-cmark = "0.9"




[package.metadata.bundle]
name = "MalChela"
identifier = "com.bakerstreet.malchela"
icon = ["images/malchela.icns"]



