[package]
name = "codesign_check"
version = "4.1.0"
edition = "2021"

[[bin]]
name = "codesign_check"
path = "src/main.rs"

[dependencies]
goblin          = "0.9.3"
plist           = "1.7"
clap            = { version = "4", features = ["derive"] }
chrono          = "0.4"
colored         = "3.1.1"
strip-ansi-escapes = "0.2.1"
common_config   = { path = "../common_config" }
common_ui       = { path = "../common_ui" }
