[package]
name = "fileanalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
yara = "0.30.0"
regex = "1"
chrono = "0.4"
base64 = "0.21"
sys-info = "0.9"
walkdir = "2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }