[package]
name = "fileanalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
yara = "0.30.0"
regex = "1"
chrono = "0.4"
base64 = "0.21"
sys-info = "0.9"
walkdir = "2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
goblin = "0.9.3"
infer = "0.19.0"
ssdeep = "0.6.0"
md5 = "0.7.0"
colored = "3.0.0"
serde = "1.0.219"
serde_derive = "1.0.219"
common_config = { path = "../common_config" }
common_ui = { path = "../common_ui" }
clap = { version = "4", features = ["derive"] }