[package]
name = "fileanalyzer"
version = "3.0.2"
edition = "2021"

[dependencies]
sha2 = "0.10"
yara = "0.30.0"
regex = "1"
chrono = "0.4"
base64 = "0.21"
sys-info = "0.9"
walkdir = "2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
goblin = "0.9.3"
infer = "0.19.0"
ssdeep = "0.6.0"
colored = "3.1.1"
serde = "1.0.228"
serde_derive = "1.0.228"
common_config = { path = "../common_config" }
common_ui = { path = "../common_ui" }
clap = { version = "4", features = ["derive"] }
pelite = "0.10.0"
md-5 = "0.10"
strip-ansi-escapes = "0.2.1"
