[package]
name = "fileminer"
version = "3.0.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
infer = "0.19.0"
md5 = "0.7.0"
prettytable = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
sha2 = "0.10.9"
tabled = "0.19.0"
walkdir = "2.5.0"
