[package]
name = "malhash"
version = "2.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
chrono = "0.4"
termcolor = "1.4"
prettytable = "0.10"
common_config = { path = "../common_config" }
colored = "3.0.0"
common_ui = { path = "../common_ui" }
clap = "4.5.40"
