[package]
name = "mismatchminer"
version = "3.0.2"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
yara = "0.30.0"
colored = "2.2"
common_config = { path = "../common_config" }
sha2 = "0.10.9"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.43"
common_ui = { path = "../common_ui" }
serde_json = "1.0"
