[package]
name = "mstrings"
version = "4.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
sigma-rust = "=0.6"
fancy-regex = "0.18"
serde_yaml = "0.9.34"
chrono = "0.4.43"
encoding_rs = "0.8.35"
log = "0.4.29"
memchr = "2.7.6"
env_logger = "0.11.8"
colored = "3.1.1"
common_config = { path = "../common_config" }
common_macho = { path = "../common_macho" }
project-root = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
common_ui = { path = "../common_ui" }
prettytable = "0.10.0"
terminal_size = "0.4.3"
tabled = "0.18.0"
sha2 = "0.10.9"
