[package]
name = "mzhash"
version = "3.0.2"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
yara = "0.30.0"
yara-sys = "0.29.0"
common_config = { path = "../common_config" }
sha2 = "0.10.9"
rayon = "1.11.0"
indicatif = "0.17.11"
md-5 = "0.10.6"
sha1 = "0.10.6"
clap = { version = "4", features = ["derive"] }
