[package]
name = "nsrlquery"
version = "3.0.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
common_ui = { path = "../common_ui" }
clap = { version = "4", features = ["derive"] }
common_config = { path = "../common_config" }
chrono = "0.4.41"
