[package]
name = "nsrlquery"
version = "3.0.3"
edition = "2021"

[dependencies]
colored = "3.1.1"
reqwest = { version = "0.12.28", features = ["json"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
common_ui = { path = "../common_ui" }
clap = { version = "4", features = ["derive"] }
common_config = { path = "../common_config" }
chrono = "0.4.43"
