[package]
name = "plist_analyzer"
version = "4.1.0"
edition = "2021"

[dependencies]
plist = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
common_config = { path = "../common_config" }
common_ui = { path = "../common_ui" }
colored = "3.1.1"
walkdir = "2"
strip-ansi-escapes = "0.2.1"
